# cpp_concurrency

./: CMakeLists.txt  IDENTIFICATION.txt
app/: test_julia_set.cpp  test_queue.cpp  test_thread_pool.cpp
include/ra/: julia_set.hpp  queue.hpp  thread_pool.hpp
lib/: thread_pool.cpp
